# research-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: cli-workflows.md  demo-runbook.md  design-sprint-audit.md  rust-tui-contract.md  seeded-solo-cli-scenario.md  tui-viewport-design.md  tui-viewport-research-notes.md
rust-tui/: Cargo.toml
rust-tui/src/: app.rs  bridge.rs  lib.rs  main.rs  model.rs
rust-tui/src/ui/: experiments_research.rs  mod.rs  overview_runs.rs  shared.rs
rust-tui/tests/: contract_schema.rs  render_screens.rs  render_views.rs
rust-tui/tests/fixtures/: status_additive.json  status_experiments_research_rich.json  status_minimal.json  status_missing_snapshot.json  status_polished.json  status_research_empty.json  status_runtime_null.json
rust-tui/tests/fixtures/workspaces/cli_workspace/: README.md
rust-tui/tests/fixtures/workspaces/module_workspace/src/research_copilot/: main.py
src/research_copilot/: __init__.py  config.py  main.py  research_state.py
src/research_copilot/agents/: definitions.py
src/research_copilot/db/: schema.py
src/research_copilot/domain/: automl.py
src/research_copilot/integrations/: __init__.py
src/research_copilot/mcp_servers/: knowledge_base.py  literature.py  registry.py  (+1 more)
tests/: conftest.py  test_autonomous_runtime.py  test_cli.py  test_cli_solo_scenario.py  test_codex_runtime.py  test_config.py  test_knowledge_base.py  test_literature.py  test_mcp_install.py  test_mcp_transport.py  test_research_ops_service.py  test_research_state.py  test_slurm.py  test_tui_adapters.py  test_tui_app.py  test_ultrawork.py  test_workflows.py
(+18 files in other folders)
