[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-copilot"
version = "0.1.0"
description = "AI-powered research assistant for ML research labs"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.45.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
db = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
research-copilot = "research_copilot.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/research_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
